--- a/EseoFly/.classpath
+++ b/EseoFly/.classpath
@@ -6,10 +6,15 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX21"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFXLibrary"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX17"/>
-	<classpathentry kind="lib" path="C:/Users/alice/Documents/Application/jar_files/jar_files/gson-2.8.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/alice/Documents/Application/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alice/Téléchargements/javaFxLib/lib/javafx.base.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alice/Téléchargements/javaFxLib/lib/javafx.controls.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alice/Téléchargements/javaFxLib/lib/javafx.fxml.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alice/Téléchargements/javaFxLib/lib/javafx.graphics.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alice/Téléchargements/javaFxLib/lib/javafx.media.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alice/Téléchargements/javaFxLib/lib/javafx.swing.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alice/Téléchargements/javaFxLib/lib/javafx.web.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alice/Téléchargements/javaFxLib/lib/javafx-swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
